--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,9 @@
   width: 64px;
   margin-right: 15px;
 }
+.logo__img-mobile {
+  width: 64px;  
+}
 .header__menu {
   display: flex;
   align-items: center;
@@ -436,7 +439,7 @@ svg.technique__svg.active path {
   position: absolute;
   left: 12px;
   top: 22px;
-  width: 100%;
+  
   color: #333333;
   /* display: none; */
 }
